syntax = "proto3";

package FeatureScaling;

message FeatureScaling {
  // The range of the features
  optional double min = 1;
  optional double max = 2;

  // The number of samples. Not necessary, but easy to compute.
  optional uint32 nsamples = 3;

  // The mean. Not necessary, but if quick to compute, why not.
  optional double mean = 4;
};
